--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,23 @@
   "repositories": [ { "type": "composer", "url": "https://packages.etlokstudios.com/" } ],
   "require": {
     "etlok/crux": "1.*",
-    "beyondcode/laravel-websockets": "^1.13",
     "ext-curl": "*",
-    "ext-json": "*"
+    "ext-json": "*",
+    "clue/block-react": "^1.5",
+    "cboden/ratchet": "^0.4.4",
+    "react/promise": "^2.8",
+    "clue/redis-react": "2.6",
+    "illuminate/broadcasting": "^9.0",
+    "illuminate/console": "^9.0",
+    "illuminate/http": "^9.0",
+    "illuminate/queue": "^9.0",
+    "illuminate/routing": "^9.0",
+    "illuminate/support": "^9.0",
+    "symfony/psr-http-message-bridge": "^1.1|^2.0"
   },
   "require-dev": {
-    "orchestra/testbench": "^6.0",
+    "clue/buzz-react": "^2.9",
+    "orchestra/testbench-browser-kit": "^7.0",
     "phpunit/phpunit": "^9.6"
   }
 }
