--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "etlok/crux-websockets",
+  "name": "mckenzie-org/crux-websockets",
   "description": "Crux WebSockets Module.",
   "type": "library",
   "license": "MIT",
